--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fabric.js Canvas Demo</title>
+  <!-- public/index.html -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.2.4/fabric.min.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; 
+    body { font-family: 'Roboto', Arial, sans-serif;
+    background-color: rgb(79, 153, 116);  text-align: center; 
         margin: 20px; display: flex; flex-direction: column; justify-content: center; }
-    canvas { border-radius: 5px; margin-top: 10px; box-shadow: 0px 1px 5px grey;
+    canvas { border-radius: 5px;
+      margin-top: 10px; box-shadow: 0px 1px 5px grey;
     }
     @media (max-width: 760px) {
         canvas{
