changed bg of canvas

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     <button onclick="clearCanvas()">🧹 Clear</button>
   </div>
 
-  <canvas id="c" width="850" height="450"></canvas>
+  <div style="background-color: rgb(102, 196, 164);">
+    <canvas id="c" width="850" height="450"></canvas>
+  </div>
 
   <h3>Saved JSON</h3>
   <textarea id="savedData" cols="70" rows="6"></textarea>
